fixing transparent navbar on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ nav.navbar {
 	z-index: 10;
 }
 
+nav.collapsed {
+	background-color: rgba(0, 0, 0, 1.0);
+}
+
 body.scrolled nav.navbar {
 	background-color: rgba(0, 0, 0, 1.0);
 	-webkit-box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.28);
